--- a/reference/笔试题1.md
+++ b/reference/笔试题1.md
@@ -121,23 +121,16 @@ Object.apply(this,arguments)
 
 12. 写一个获取非行间样式的函数
 
-  function getStyle(obj,attr,value)
-  {
-  if(!value)
-  {
-  if(obj.currentStyle)
-  {
-  return obj.currentStyle(attr)
-  }
-  else
-  {
-  obj.getComputedStyle(attr,false)
-  }
-  }
-  else
-  {
-  obj.style[attr]=value
-  }
+  function getStyle(obj,attr,value){
+    if(!value){
+      if(obj.currentStyle){
+        return obj.currentStyle(attr)
+      } else {
+        obj.getComputedStyle(attr,false)
+      }
+     } else {
+      obj.style[attr]=value
+     }
   }
 
 13. 事件委托是什么
