--- a/reference/笔试题1.md
+++ b/reference/笔试题1.md
@@ -121,16 +121,16 @@ Object.apply(this,arguments)
 
 12. 写一个获取非行间样式的函数
 
-  function getStyle(obj,attr,value){
-    if(!value){
-      if(obj.currentStyle){
-        return obj.currentStyle(attr)
+  function getStyle(obj, attr, value) {
+      if (!value) {
+          if (obj.currentStyle) {
+              return obj.currentStyle(attr)
+          } else {
+              obj.getComputedStyle(attr, false)
+          }
       } else {
-        obj.getComputedStyle(attr,false)
+          obj.style[attr] = value
       }
-     } else {
-      obj.style[attr]=value
-     }
   }
 
 13. 事件委托是什么
@@ -171,17 +171,15 @@ Document.ready原生种没有这个方法，jquery中有 $().ready(function)
 一段脚本只能读取来自于同一来源的窗口和文档的属性，这里的同一来源指的是主机名、协议和端口号的组合
 
 22. 编写一个数组去重的方法
-  function oSort(arr)
-  {
-  var result ={};
-  var newArr=[];
-  for(var i=0;i<arr.length;i++)
-  {
-  if(!result[arr])
-  {
-  newArr.push(arr)
-  result[arr]=1
-  }
-  }
-  return newArr
+
+  function oSort(arr) {
+      var result = {};
+      var newArr = [];
+      for (var i = 0; i < arr.length; i++) {
+          if (!result[arr]) {
+              newArr.push(arr)
+              result[arr] = 1
+          }
+      }
+      return newArr
   }
