--- a/demo-design-pattern/v2/doc/中介者模式.md
+++ b/demo-design-pattern/v2/doc/中介者模式.md
@@ -5,24 +5,114 @@
 
 中介者模式（Mediator Pattern）是用来降低多个对象和类之间的通信复杂性。这种模式提供了一个中介类，该类通常处理不同类之间的通信，并支持松耦合，使代码易于维护。中介者模式属于行为型模式。
 
-**意图**：用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。
+* 例子：
 
-**主要解决**：对象与对象之间存在大量的关联关系，这样势必会导致系统的结构变得很复杂，同时若一个对象发生改变，我们也需要跟踪与之相关联的对象，同时做出相应的处理。
+        class Player{
+            constructor(name, teamColor, playerDirector) {
+                this.name = name;
+                this.teamColor = teamColor;
+                this.status = 'live';
+                this.playerDirector = playerDirector;
+                this.add();
+            }
 
-**何时使用**：多个类相互耦合，形成了网状结构。
+            win() {
+                console.log('for self win action: ' + this.name);
+            }
 
-**如何解决**：将上述网状结构分离为星型结构。
+            lose() {
+                console.log('for self lose action: ' + this.name);
+            }
 
-**关键代码**：对象 Colleague 之间的通信封装到一个类中单独处理。
+            add() {
+                console.log('for self add action: ' + this.name);
+                this.playerDirector.recieveMessage('add', this);
+            }
 
-**应用实例**： 1、中国加入 WTO 之前是各个国家相互贸易，结构复杂，现在是各个国家通过 WTO 来互相贸易。 2、机场调度系统。 3、MVC 框架，其中C（控制器）就是 M（模型）和 V（视图）的中介者。
+            remove() {
+                console.log('for self remove action: ' + this.name);
+                this.playerDirector.recieveMessage('remove', this);
+            }
 
-**优点**： 1、降低了类的复杂度，将一对多转化成了一对一。 2、各个类之间的解耦。 3、符合迪米特原则。
+            die() {
+                console.log('for self die action: ' + this.name);
+                this.playerDirector.recieveMessage('die', this);
+            }
 
-**缺点**：中介者会庞大，变得复杂难以维护。
+            getMessage(message) {
+                console.log(`${this.name} recieved message: ${message}`);
+            }
+        }
 
-**使用场景**： 
-1. 系统中对象之间存在比较复杂的引用关系，导致它们之间的依赖关系结构混乱而且难以复用该对象。 
-2. 想通过一个中间类来封装多个类中的行为，而又不想生成太多的子类。
+        export class PlayerMediator{
+            constructor() {
+                this.players = {};
+            }
 
-**注意事项**：不应当在职责混乱的时候使用。
+            recieveMessage(type, player) {
+                this[type](player);
+            }
+
+            add(player) {
+                this.players[player.teamColor] = this.players[player.teamColor] || [];
+                this.players[player.teamColor].push(player);
+                this.getAllPlayerExceptThis(player).forEach((p) => {
+                    p.getMessage(`player ${player.name} added.`);
+                });
+            }
+
+            remove(player) {
+                let index = this.players[player.teamColor].indexOf(player);
+                this.players[player.teamColor][index].status = 'disconnect';
+                this.getAllPlayerExceptThis(player).forEach((p) => {
+                    p.getMessage(`player ${player.name} disconnected.`);
+                });
+                if (this.verifyOver(player.teamColor)) {
+                    this.gameOver(player.teamColor)
+                }
+            }
+
+            die(player) {
+                let index = this.players[player.teamColor].indexOf(player);
+                this.players[player.teamColor][index].status = 'die';
+                this.getAllPlayerExceptThis(player).forEach((p) => {
+                    p.getMessage(`player ${player.name} dead.`);
+                });
+                if (this.verifyOver(player.teamColor)) {
+                    this.gameOver(player.teamColor)
+                }
+            }
+
+            getAllPlayerExceptThis(player) {
+                let ret = [];
+                for (let t of Object.keys(this.players)) {
+                    for (let p of this.players[t]) {
+                        if (player !== p) {
+                            ret.push(p);
+                        }
+                    }
+                }
+                return ret;
+            }
+
+            verifyOver(teamColor) {
+                for (let player of this.players[teamColor]) {
+                    if (player.status === 'live') {
+                        return false;
+                    }
+                }
+                return true
+            }
+
+            gameOver(teamColor) {
+                for (let t of Object.keys(this.players)) {
+                    for (let player of this.players[t]) {
+                        if (teamColor === player.teamColor) {
+                            player.lose();
+                        } else {
+                            player.win();
+                        }
+                    }
+                }
+            }
+        }
